--- a/city/pages/on-118_metric_2_e.html
+++ b/city/pages/on-118_metric_2_e.html
@@ -1129,112 +1129,110 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
       </section>
 	</div>
 </section>
-<!--WXO_BOTTOM_BANNER_PLACEHOLDER-->
+<section class="gc-prtts hidden-print"><h2>Features</h2><div class="row"><section class="col-lg-4 col-md-6 mrgn-bttm-md">
+<a rel="external" href="/redirect.php?url=http://ec.gc.ca/uv/default.asp?lang=En&amp;n=DCF1C20A-1">
+<h3 class="h5">UV Index and sun protection</h3>
+<img class="img-responsive thumbnail mrgn-bttm-sm" src="/weather/cacheable/images/banners/SM_123_03_30-UV-Index-and-Sun-Protection_button360x203.jpg" alt="" />
+</a>
+<p>Be weather wise!</p></section><section class="col-lg-4 col-md-6 mrgn-bttm-md">
+<a rel="external" href="/redirect.php?url=http://www.canada.ca/en/health-canada/services/sun-safety/extreme-heat-heat-waves.html">
+<h3 class="h5">Extreme Heat Protection</h3>
+<img class="img-responsive thumbnail mrgn-bttm-sm" src="/weather/cacheable/images/banners/SM_124_03_30-Extreme-Heat-02_button_360x203.jpg" alt="" />
+</a>
+<p>Be prepared!</p></section><section class="col-lg-4 col-md-6 mrgn-bttm-md">
+<a rel="external" href="/redirect.php?url=http://www.ec.gc.ca/cas-aqhi/">
+<h3 class="h5">Be Air Aware</h3>
+<img class="img-responsive thumbnail mrgn-bttm-sm" src="/weather/cacheable/images/banners/SM_120_03_30-Air-Quality_01_360x203.jpg" alt="" />
+</a>
+<p>Air Quality Health Index</p></section></div></section>
 <div class="row pagedetails">
    <div class="col-sm-5 col-xs-12 datemod">
       <dl id="wb-dtmd">
          <dt>Date modified:&#32;</dt>
-         <dd><time property="dateModified">2017-01-01</time></dd>
+         <dd><time property="dateModified">2017-07-21</time></dd>
       </dl>
    </div>
    <div class="clear visible-xs"></div>
    <div class="col-sm-4 col-xs-6">
-      <a href="/web/20170101123719/http://weather.gc.ca/mainmenu/contact_us_e.html" class="btn btn-default"><span class="glyphicon glyphicon-comment mrgn-rght-sm"></span>Feedback<span class="wb-inv"> about this web site</span></a>
+      <a href="/mainmenu/contact_us_e.html" class="btn btn-default"><span class="glyphicon glyphicon-comment mrgn-rght-sm"></span>Feedback<span class="wb-inv"> about this web site</span></a>
    </div>
    <div class="col-sm-3 col-xs-6 text-right">
-      <div class="wb-share" data-wb-share="{&quot;lnkClass&quot;: &quot;btn btn-default&quot;}"></div>
+      <div class="wb-share" data-wb-share='{"lnkClass": "btn btn-default"}'></div>
    </div>
    <div class="clear visible-xs"></div>
 </div>
 </main>
-<aside class="gc-nttvs container">
-<h2>Government of Canada activities and initiatives</h2>
-<div id="gcwb_prts" class="wb-eqht row" data-ajax-replace="/data/pco-fetch/features-en.html">
-<p class="mrgn-lft-md"><a href="https://web.archive.org/web/20170101123719/http://www.canada.ca/activities.html">Access Government of Canada activities and initiatives</a></p>
-</div></aside>
+<div class="row pagedetails">
+<div class="col-sm-6 col-lg-4 mrgn-tp-sm">
+<a href="https://www.canada.ca/en/report-problem.html" class="btn btn-default btn-block">Report a problem or mistake on this page</a>
+</div>
+<div class="col-sm-3 mrgn-tp-sm pull-right">
+<div class="wb-share" data-wb-share='{"lnkClass": "btn btn-default btn-block"}'></div>
+</div>
+<div class="datemod col-xs-12 mrgn-tp-lg">
+<dl id="wb-dtmd">
+<dt>Date modified:&#32;</dt>
+<dd><time property="dateModified">2017-07-22</time></dd>
+</dl>
+</div>
+</div>
+</main>
+
+
 <footer role="contentinfo" id="wb-info">
-   <nav role="navigation" class="container wb-navcurr">
-      <h2 class="wb-inv">About government</h2>
-      <ul class="list-unstyled colcount-sm-2 colcount-md-3">
-   <li><a href="/web/20170101123719/http://weather.gc.ca/mainmenu/contact_us_e.html">Contact us</a></li>
-   <li><a href="https://web.archive.org/web/20170101123719/https://www.canada.ca/en/government/dept.html">Departments and agencies</a></li>
-   <li><a href="https://web.archive.org/web/20170101123719/https://www.canada.ca/en/government/publicservice.html">Public service and military</a></li>
-   <li><a href="https://web.archive.org/web/20170101123719/http://news.gc.ca/">News</a></li>
-   <li><a href="https://web.archive.org/web/20170101123719/https://www.canada.ca/en/government/system/laws.html">Treaties, laws and regulations</a></li>
-   <li><a href="https://web.archive.org/web/20170101123719/https://www.canada.ca/en/transparency/reporting.html">Government-wide reporting</a></li>
-   <li><a href="https://web.archive.org/web/20170101123719/http://pm.gc.ca/eng">Prime Minister</a></li>
-   <li><a href="https://web.archive.org/web/20170101123719/https://www.canada.ca/en/government/system.html">How government works</a></li>
-   <li><a href="https://web.archive.org/web/20170101123719/http://open.canada.ca/en/">Open government</a></li>
+<nav role="navigation" class="container wb-navcurr">
+<h2 class="wb-inv">About government</h2>
+<ul class="list-unstyled colcount-sm-2 colcount-md-3">
+<li><a href="https://www.canada.ca/en/contact.html">Contact us</a></li>
+<li><a href="https://www.canada.ca/en/government/dept.html">Departments and agencies</a></li>
+<li><a href="https://www.canada.ca/en/government/publicservice.html">Public service and military</a></li>
+<li><a href="http://news.gc.ca/">News</a></li>
+<li><a href="https://www.canada.ca/en/government/system/laws.html">Treaties, laws and regulations</a></li>
+<li><a href="https://www.canada.ca/en/transparency/reporting.html">Government-wide reporting</a></li>
+<li><a href="http://pm.gc.ca/eng">Prime Minister</a></li>
+<li><a href="https://www.canada.ca/en/government/system.html">How government works</a></li>
+<li><a href="http://open.canada.ca/en/">Open government</a></li>
 </ul>
-   </nav>
-   <div class="brand">
-   <div class="container">
-      <div class="row ">
-         <nav class="col-md-10 ftr-urlt-lnk">
-            <h2 class="wb-inv">About this site</h2>
-            <ul>
-               <li><a href="https://web.archive.org/web/20170101123719/https://www1.canada.ca/en/contact/feedback.html">Feedback</a></li>
-               <li><a href="https://web.archive.org/web/20170101123719/https://www.canada.ca/en/social.html">Social media</a></li>
-               <li><a href="https://web.archive.org/web/20170101123719/https://www.canada.ca/en/mobile.html">Mobile applications</a></li>
-               <li><a href="https://web.archive.org/web/20170101123719/http://www1.canada.ca/en/newsite.html">About Canada.ca</a></li>
-               <li><a href="https://web.archive.org/web/20170101123719/https://www.canada.ca/en/transparency/terms.html">Terms and conditions</a></li>
-               <li><a href="https://web.archive.org/web/20170101123719/https://www.canada.ca/en/transparency/privacy.html">Privacy</a></li>
-            </ul>
-         </nav>
-         <div class="col-xs-6 visible-sm visible-xs tofpg">
-            <a href="#wb-cont">Top of Page <span class="glyphicon glyphicon-chevron-up"></span></a>
-         </div>
-         <div class="col-xs-6 col-md-2 text-right">
-            <object type="image/svg+xml" tabindex="-1" role="img" data="/web/20170101123719im_/http://weather.gc.ca/template/gcweb/v4.0.22/assets/wmms-blk.svg" aria-label="Symbol of the Government of Canada"></object>
-         </div>
-      </div>
-   </div>
+</nav>
+<div class="brand">
+<div class="container">
+<div class="row">
+<nav class="col-md-10 ftr-urlt-lnk">
+<h2 class="wb-inv">About this site</h2>
+<ul>
+<li><a href="https://www1.canada.ca/en/contact/feedback.html">Feedback</a></li>
+<li><a href="https://www.canada.ca/en/social.html">Social media</a></li>
+<li><a href="https://www.canada.ca/en/mobile.html">Mobile applications</a></li>
+<li><a href="https://www1.canada.ca/en/newsite.html">About Canada.ca</a></li>
+<li><a href="https://www.canada.ca/en/transparency/terms.html">Terms and conditions</a></li>
+<li><a href="https://www.canada.ca/en/transparency/privacy.html">Privacy</a></li>
+</ul>
+</nav>
+<div class="col-xs-6 visible-sm visible-xs tofpg">
+<a href="#wb-cont">Top of Page <span class="glyphicon glyphicon-chevron-up"></span></a>
+</div>
+<div class="col-xs-6 col-md-2 text-right">
+<object type="image/svg+xml" tabindex="-1" role="img" data="./GCWeb/assets/wmms-blk.svg" aria-label="Symbol of the Government of Canada"></object>
+</div>
+</div>
+</div>
 </div>
 </footer>
-
-
 <!--[if gte IE 9 | !IE ]><!-->
-<script src="//web.archive.org/web/20170101123719js_/http://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
-<script src="/web/20170101123719js_/http://weather.gc.ca/template/gcweb/v4.0.22/js/wet-boew.min.js"></script>
-<script src="/web/20170101123719js_/http://weather.gc.ca/cacheable/js/city/metric_conversion.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.js"></script>
+<script src="/weather/wet-boew/js/wet-boew.min.js"></script>
 <!--<![endif]-->
 <!--[if lt IE 9]>
-<script src="/template/gcweb/v4.0.22/js/ie8-wet-boew2.min.js"></script>
+<script src="/weather/wet-boew/js/ie8-wet-boew2.min.js"></script>
+
 <![endif]-->
-<script src="/web/20170101123719js_/http://weather.gc.ca/template/gcweb/v4.0.22/js/theme.min.js"></script>
-<script src="/web/20170101123719js_/http://weather.gc.ca/cacheable/js/city/jquery-ui-1.10.3.custom.min.js"></script>
-<script src="/web/20170101123719js_/http://weather.gc.ca/cacheable/js/city/availableTags_e.min.js"></script>
-<script src="/web/20170101123719js_/http://weather.gc.ca/template/gcweb/v4.0.22/js/deps/jquery.dataTables.min.js"></script>
-<script src="/web/20170101123719js_/http://weather.gc.ca/cacheable/js/myprofile/alerts-1.0.min.js"></script>
-<script src="/web/20170101123719js_/http://weather.gc.ca/cacheable/js/myprofile/refresher-1.0.min.js"></script>
-<script type="text/javascript" src="/web/20170101123719js_/http://weather.gc.ca/city/js/cityjump.js"></script>
-<script>
-      document.getElementById("jump").className = "";
-      var max_chars = 50;
-
-      $('#city').keydown( function(e){
-         if ($(this).val().length > max_chars) {
-            $(this).val($(this).val().substr(0, max_chars));
-         }
-      });
-
-      $('#city').keyup( function(e){
-         if ($(this).val().length > max_chars) {
-               $(this).val($(this).val().substr(0, max_chars));
-            }
-         });
-      </script>
-      <script src="/web/20170101123719js_/http://weather.gc.ca/city/js/jquery.h5validate.js"></script>
-      <script>
-      $(document).ready(function () {
-      $('form').h5Validate({
-         errorClass:'white'
-      });
-      });
-      </script>
-   <script src="/web/20170101123719js_/http://weather.gc.ca/city/js/responsive_city.js"></script>
+<script src="/weather/GCWeb/js/theme.min.js"></script>
+<script src="/weather/cacheable/js/city/jquery-ui-1.10.3.custom.min.js"></script>
+<script src="/weather/cacheable/js/city/availableTags_e.min.js"></script>
+<script src="/weather/GCWeb/js/deps/jquery.dataTables.min.js"></script>
+<script src="/weather/cacheable/js/myprofile/alerts-1.0.min.js"></script>
+<script src="/weather/cacheable/js/myprofile/refresher-1.0.min.js"></script>
+<script type="text/javascript" src="/weather/city/js/cityjump.js"></script>
+<script src="/weather/GCWeb/js/theme.min.js"></script>
 </body>
 </html>
-
-
-
