--- a/city/pages/on-118_metric_2_e.html
+++ b/city/pages/on-118_metric_2_e.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html><!--[if lt IE 9]><html class="no-js lt-ie9" lang="en" dir="ltr"><![endif]--><!--[if gt IE 8]><!-->
 <html class="no-js" lang="en" dir="ltr">
 <!--<![endif]-->
@@ -148,7 +147,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
 <div id="container">
 												<div id="statement">
 										 <h2>
-    <a href="/web/20170101123719/http://weather.gc.ca/warnings/report_e.html?on41#901273741166841461201701010503ws1171cwto">SPECIAL WEATHER STATEMENT IN EFFECT</a>
+    <a href="weather/warnings/ottawa-report_2_e.html">SPECIAL WEATHER STATEMENT IN EFFECT</a>
   </h2>
 					</div>
 				<div id="mainContent" class="mrgn-tp-lg">
