--- a/warnings/ottawa-report_2_e.html
+++ b/warnings/ottawa-report_2_e.html
@@ -158,7 +158,19 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
 	 <div class="row">
 	 <div class="col-xs-12">
 
-    <p>City of Ottawa<br/>15:45 EST Wednesday 21 December 2016<br/><br/>No Alerts in effect.</p><section class="followus hidden-print"><h2>Follow:</h2><ul class="list-inline mrgn-tp-lg"><li><a href="/web/20161221204519/http://weather.gc.ca/rss/battleboard/on41_e.xml"><img src="/weather/cacheable/images/img/feed-icon-14x14.png" alt="ATOM feed" class="mrgn-rght-sm">ATOM</a></li>
+    <h2>Statements</h2> <p><span id="1749456811044843870201701100502wo2080cwvr">10:26 AM PST Saturday 14 January 2017</span><br/> <strong>Blowing Snow Advisory:</strong> </p> 
+<ul> <li>Ottawa</li> </ul>
+ <p>BLOWING SNOW ADVISORY IN EFFECT FOR OTTAWA.<br/><br/>Snowfall, with total amounts of 5 to 10 cm is expected.
+
+	<br/> Total snowfall amounts near 10 cm are forecast, with snow beginning overnight tonight and continuing into Sunday afternoon. In some areas, snow is expected to become mixed with or change over to ice pellets and freezing rain on Sunday afternoon, before tapering to flurries by Sunday evening.
+
+<br/>Be prepared to adjust your driving with changing road conditions. Accumulating snow could make travel difficult over some locations.
+
+<br/>Please continue to monitor alerts and forecasts issued by Environment Canada. To report severe weather, send an email to ec.weathernlwo.ec@canada.com </p>
+
+ <p>Issued by  Environment Canada and the B.C. Ministry of Environment</p>
+
+<section class="followus hidden-print"><h2>Follow:</h2><ul class="list-inline mrgn-tp-lg"><li><a href="/web/20170114225603/http://weather.gc.ca:80/rss/battleboard/bc14_e.xml"><img src="/web/20170114225603im_/http://weather.gc.ca:80/cacheable/images/img/feed-icon-14x14.png" alt="ATOM feed" class="mrgn-rght-sm">ATOM</a></li>
 </ul>
 </section></div>
 </div>
