--- a/warnings/ottawa-report_2_e.html
+++ b/warnings/ottawa-report_2_e.html
@@ -160,17 +160,17 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
 
     <h2>Statements</h2> <p><span id="1749456811044843870201701100502wo2080cwvr">10:26 AM PST Saturday 14 January 2017</span><br/> <strong>Blowing Snow Advisory:</strong> </p> 
 <ul> <li>Ottawa</li> </ul>
- <p>BLOWING SNOW ADVISORY IN EFFECT FOR OTTAWA.<br/><br/>Snowfall, with total amounts of 5 to 10 cm is expected.
+ <p>BLOWING SNOW ADVISORY IN EFFECT FOR OTTAWA.<br/><br/>Snowfall, with total amounts of 5 to 10 cm is expected.<br/><br/>
 
-	<br/> Total snowfall amounts near 10 cm are forecast, with snow beginning overnight tonight and continuing into Sunday afternoon. In some areas, snow is expected to become mixed with or change over to ice pellets and freezing rain on Sunday afternoon, before tapering to flurries by Sunday evening.
+	<br/><br/>Total snowfall amounts near 10 cm are forecast, with snow beginning overnight tonight and continuing into Sunday afternoon. In some areas, snow is expected to become mixed with or change over to ice pellets and freezing rain on Sunday afternoon, before tapering to flurries by Sunday evening.<br/><br/>
 
-<br/>Be prepared to adjust your driving with changing road conditions. Accumulating snow could make travel difficult over some locations.
+<br/><br/>Be prepared to adjust your driving with changing road conditions. Accumulating snow could make travel difficult over some locations.<br/><br/>
 
-<br/>Please continue to monitor alerts and forecasts issued by Environment Canada. To report severe weather, send an email to ec.weathernlwo.ec@canada.com </p>
+<br/><br/>Please continue to monitor alerts and forecasts issued by Environment Canada. To report severe weather, send an email to ec.weathernlwo.ec@canada.com <br/><br/>
 
- <p>Issued by  Environment Canada and the B.C. Ministry of Environment</p>
+ <p>Issued by Environment Canada</p>
 
-<section class="followus hidden-print"><h2>Follow:</h2><ul class="list-inline mrgn-tp-lg"><li><a href="/web/20170114225603/http://weather.gc.ca:80/rss/battleboard/bc14_e.xml"><img src="/web/20170114225603im_/http://weather.gc.ca:80/cacheable/images/img/feed-icon-14x14.png" alt="ATOM feed" class="mrgn-rght-sm">ATOM</a></li>
+<section class="followus hidden-print"><h2>Follow:</h2><ul class="list-inline mrgn-tp-lg"><li><a href="/web/20170114225603/http://weather.gc.ca:80/rss/battleboard/bc14_e.xml"><img src="/weather/cacheable/images/img/feed-icon-14x14.png" alt="ATOM feed" class="mrgn-rght-sm">ATOM</a></li>
 </ul>
 </section></div>
 </div>
