--- a/warnings/ottawa-report_2_e.html
+++ b/warnings/ottawa-report_2_e.html
@@ -164,9 +164,9 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
 
 	<br/>Total snowfall amounts near 10 cm are forecast, with snow beginning overnight tonight and continuing into Sunday afternoon. In some areas, snow is expected to become mixed with or change over to ice pellets and freezing rain on Sunday afternoon, before tapering to flurries by Sunday evening.<br/>
 
-<br/>Be prepared to adjust your driving with changing road conditions. Accumulating snow could make travel difficult over some locations.<br/><br/>
+<br/>Be prepared to adjust your driving with changing road conditions. Accumulating snow could make travel difficult over some locations.<br/>
 
-<br/><br/>Please continue to monitor alerts and forecasts issued by Environment Canada. To report severe weather, send an email to ec.weathernlwo.ec@canada.com <br/>
+<br/>Please continue to monitor alerts and forecasts issued by Environment Canada. To report severe weather, send an email to ec.weathernlwo.ec@canada.com <br/>
 
  <p>Issued by Environment Canada</p>
 
