--- a/radar/xft-index_2_e.html
+++ b/radar/xft-index_2_e.html
@@ -17,8 +17,9 @@
 <meta name="dcterms.modified" title="W3CDTF" content="2017-05-25" />
 		<!-- Meta data-->
 		<!--[if gte IE 9 | !IE ]><!-->
-<link href="/template/gcweb/v4.0.22/assets/favicon.ico" rel="icon" type="image/x-icon" />
-<link rel="stylesheet" href="/template/gcweb/v4.0.22/css/theme.min.css" />
+<link href="/weather/GCWeb/assets/favicon.ico" rel="icon" type="image/x-icon">
+<link rel="stylesheet" href="/weather/GCWeb/css/theme.min.css">
+
 <!--<![endif]-->
 
 <!--[if lt IE 9]>
