--- a/radar/xft-index_2_e.html
+++ b/radar/xft-index_2_e.html
@@ -37,8 +37,8 @@
 <!-- Google Tag Manager DO NOT REMOVE OR MODIFY - NE PAS SUPPRIMER OU MODIFIER -->
 <script>dataLayer1 = [];</script>
 <!-- End Google Tag Manager -->
-<link rel="stylesheet" href="/cacheable/css/city/jquery-ui-1.10.3.custom.min.css" />
-<link rel="stylesheet" href="/template/wxo/css/wxo.css" />
+<link rel="stylesheet" href="/weather/cacheable/css/city/jquery-ui-1.10.3.custom.min.css" />
+<!-- <link rel="stylesheet" href="/template/wxo/css/wxo.css" /> -->
 <!--[if IE 8]>
 <link href="/weather/cacheable/css/radar/radar2.css" rel="stylesheet" type="text/css" />
 <![endif]-->
@@ -196,7 +196,7 @@
 					<img id="animation-image" 
 					alt="xRadar image for Franktown." 
 					title="xRadar image for Franktown." 
-					src="/data/radar/detailed/temp_image//XFT/XFT_PRECIP_RAIN_2017_08_15_17_30.GIF"
+					src="/weather/data/radar/detailed/temp_image/XFT-25-JUN-17-01.20.50.225145.gif"
 					width="580" 
 					height="480" 
 					class="wxo-radar-img wxo-radar-img-nojs img-responsive"
@@ -205,7 +205,7 @@
 				<img id="animation-image" 
 					alt="Radar image for Franktown." 
 					title="Radar image for Franktown." 
-					src="/data/radar/detailed/temp_image//XFT/XFT_PRECIP_RAIN_2017_08_15_17_30.GIF"
+					src="/weather/data/radar/detailed/temp_image/XFT-25-JUN-17-01.20.50.225145.gif"
 					width="580" 
 					height="480" 
 					class="wxo-radar-img hidden-xs wxo-radar-img-nojs img-responsive"
@@ -832,41 +832,55 @@
       </section>
 	</div>
 </section>
-<section class="gc-prtts"><h2>Features</h2><div class="row"><section class="col-lg-4 col-md-6 mrgn-bttm-md">
+<section class="gc-prtts hidden-print"><h2>Features</h2><div class="row"><section class="col-lg-4 col-md-6 mrgn-bttm-md">
 <a rel="external" href="/redirect.php?url=http://ec.gc.ca/uv/default.asp?lang=En&amp;n=DCF1C20A-1">
 <h3 class="h5">UV Index and sun protection</h3>
-<img class="img-responsive thumbnail mrgn-bttm-sm" src="/cacheable/images/banners/SM_123_03_30-UV-Index-and-Sun-Protection_button360x203.jpg?ver=1501615386" alt="" />
+<img class="img-responsive thumbnail mrgn-bttm-sm" src="/weather/cacheable/images/banners/SM_123_03_30-UV-Index-and-Sun-Protection_button360x203.jpg" alt="" />
 </a>
 <p>Be weather wise!</p></section><section class="col-lg-4 col-md-6 mrgn-bttm-md">
 <a rel="external" href="/redirect.php?url=http://www.canada.ca/en/health-canada/services/sun-safety/extreme-heat-heat-waves.html">
 <h3 class="h5">Extreme Heat Protection</h3>
-<img class="img-responsive thumbnail mrgn-bttm-sm" src="/cacheable/images/banners/SM_124_03_30-Extreme-Heat-02_button_360x203.jpg?ver=1501615386" alt="" />
+<img class="img-responsive thumbnail mrgn-bttm-sm" src="/weather/cacheable/images/banners/SM_124_03_30-Extreme-Heat-02_button_360x203.jpg" alt="" />
 </a>
 <p>Be prepared!</p></section><section class="col-lg-4 col-md-6 mrgn-bttm-md">
-<a rel="external" href="/redirect.php?url=http://www.ec.gc.ca/foudre-lightning/default.asp?lang=En&amp;n=974AFF95-1">
-<h3 class="h5">Lightning Safety</h3>
-<img class="img-responsive thumbnail mrgn-bttm-sm" src="/cacheable/images/banners/SM_121_03_30-Lightning-Safety_Button_360x203.jpg?ver=1501615386" alt="" />
+<a rel="external" href="/redirect.php?url=http://www.ec.gc.ca/cas-aqhi/">
+<h3 class="h5">Be Air Aware</h3>
+<img class="img-responsive thumbnail mrgn-bttm-sm" src="/weather/cacheable/images/banners/SM_120_03_30-Air-Quality_01_360x203.jpg" alt="" />
 </a>
-<p>When thunder roars, GO INDOORS!</p></section></div></section><div class="row pagedetails">
+<p>Air Quality Health Index</p></section></div></section>
+<div class="row pagedetails">
    <div class="col-sm-5 col-xs-12 datemod">
       <dl id="wb-dtmd">
          <dt>Date modified:&#32;</dt>
-         <dd><time property="dateModified">2017-05-25</time></dd>
+         <dd><time property="dateModified">2017-07-21</time></dd>
       </dl>
    </div>
    <div class="clear visible-xs"></div>
-   <div class="col-sm-4 col-xs-6"><a href="/mainmenu/contact_us_e.html" class="btn btn-default"><span class="glyphicon glyphicon-comment mrgn-rght-sm"></span>Feedback<span class="wb-inv"> about this web site</span></a></div>
+   <div class="col-sm-4 col-xs-6">
+      <a href="/mainmenu/contact_us_e.html" class="btn btn-default"><span class="glyphicon glyphicon-comment mrgn-rght-sm"></span>Feedback<span class="wb-inv"> about this web site</span></a>
+   </div>
    <div class="col-sm-3 col-xs-6 text-right">
       <div class="wb-share" data-wb-share='{"lnkClass": "btn btn-default"}'></div>
    </div>
    <div class="clear visible-xs"></div>
 </div>
 </main>
-<aside class="gc-nttvs container">
-<h2>Government of Canada activities and initiatives</h2>
-<div id="gcwb_prts" class="wb-eqht row" data-ajax-replace="/data/pco-fetch/features-en.html">
-<p class="mrgn-lft-md"><a href="http://www.canada.ca/activities.html">Access Government of Canada activities and initiatives</a></p>
-</div></aside>
+<div class="row pagedetails">
+<div class="col-sm-6 col-lg-4 mrgn-tp-sm">
+<a href="https://www.canada.ca/en/report-problem.html" class="btn btn-default btn-block">Report a problem or mistake on this page</a>
+</div>
+<div class="col-sm-3 mrgn-tp-sm pull-right">
+<div class="wb-share" data-wb-share='{"lnkClass": "btn btn-default btn-block"}'></div>
+</div>
+<div class="datemod col-xs-12 mrgn-tp-lg">
+<dl id="wb-dtmd">
+<dt>Date modified:&#32;</dt>
+<dd><time property="dateModified">2017-07-22</time></dd>
+</dl>
+</div>
+</div>
+</main>
+
 <footer role="contentinfo" id="wb-info">
    <nav role="navigation" class="container wb-navcurr">
       <h2 class="wb-inv">About government</h2>
