--- a/radar/xft-index_2_e.html
+++ b/radar/xft-index_2_e.html
@@ -995,5 +995,24 @@
 <div class="device-sm visible-sm"></div>
 <div class="device-md visible-md"></div>
 <div class="device-lg visible-lg"></div>
+	
+	<!--[if gte IE 9 | !IE ]><!-->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.js"></script>
+<script src="/weather/wet-boew/js/wet-boew.min.js"></script>
+<!--<![endif]-->
+<!--[if lt IE 9]>
+<script src="/weather/wet-boew/js/ie8-wet-boew2.min.js"></script>
+
+<![endif]-->
+<script type="text/javascript" src="/weather/cacheable/js/radar/init.js"></script>
+<script src="/weather/cacheable/js/responsive/jquery.rwdImageMaps.js"></script>
+<script src="/weather/cacheable/js/radar/cities_overlay.js"></script>
+<script src="/weather/cacheable/js/radar/intensity_scale_local.js"></script>
+<script src="/weather/cacheable/js/radar/cookie_manager.js"></script>
+<script src="/weather/cacheable/js/radar/xmlhttpifr.js"></script> 
+<script src="/weather/cacheable/js/radar/radar_controller.js"></script>
+<script src="/weather/cacheable/js/radar/Animator.js"></script>
+</body>
+
 	</body>
 </html>
