--- a/radar/xft-index_2_e.html
+++ b/radar/xft-index_2_e.html
@@ -923,17 +923,17 @@
 
 <!--[if gte IE 9 | !IE ]><!-->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.js"></script>
-<script src="/template/gcweb/v4.0.22/js/wet-boew.min.js"></script>
+<script src="/weather/wet-boew/js/wet-boew.min.js"></script>
 <!--<![endif]-->
 <!--[if lt IE 9]>
-<script src="/template/gcweb/v4.0.22/js/ie8-wet-boew2.min.js"></script>
+<script src="/weather/wet-boew/js/ie8-wet-boew2.min.js"></script>
 <![endif]-->
-<script src="/template/gcweb/v4.0.22/js/theme.min.js"></script>
+<script src="/weather/GCweb/js/theme.min.js"></script>
 
 
-<script src="/cacheable/js/city/jquery-ui-1.10.3.custom.min.js"></script>
-<script src="/cacheable/js/city/availableTags_e.min.js"></script>
-<script src="/city/js/cityjump.js"></script>
+<script src="/weather/cacheable/js/city/jquery-ui-1.10.3.custom.min.js"></script>
+<script src="/weather/cacheable/js/city/availableTags_e.min.js"></script>
+<script src="/weather/city/js/cityjump.js"></script>
 <script>
     document.getElementById("jump").className = "";
     var max_chars = 50;
@@ -948,10 +948,10 @@
         }
     });
 </script>
-<script src="/template/gcweb/v4.0.22/js/deps/jquery.dataTables.min.js"></script>
-<script src="/city/js/jquery.h5validate.js"></script>
-<script src="/cacheable/js/myprofile/alerts-1.0.min.js"></script>
-<script src="/cacheable/js/myprofile/refresher-1.0.min.js"></script>
+<script src="/weather/template/GCweb/js/deps/jquery.dataTables.min.js"></script>
+<script src="/weather/city/js/jquery.h5validate.js"></script>
+<script src="/weather/cacheable/js/myprofile/alerts-1.0.min.js"></script>
+<script src="/weather/cacheable/js/myprofile/refresher-1.0.min.js"></script>
 <script>
     $(document).ready(function () {
         $('form').h5Validate({
@@ -960,15 +960,15 @@
     });
 </script>
 
-<script type="text/javascript" src="/cacheable/js/radar/init.js"></script>
-<script src="/cacheable/js/responsive/jquery.rwdImageMaps.js"></script>
-<script src="/cacheable/js/radar/cities_overlay.js"></script>
-<script src="/cacheable/js/radar/intensity_scale_local.js"></script>
-<script src="/cacheable/js/radar/cookie_manager.js"></script>
+<script type="text/javascript" src="/weather/cacheable/js/radar/init.js"></script>
+<script src="/weather/cacheable/js/responsive/jquery.rwdImageMaps.js"></script>
+<script src="/weather/cacheable/js/radar/cities_overlay.js"></script>
+<script src="/weather/cacheable/js/radar/intensity_scale_local.js"></script>
+<script src="/weather/cacheable/js/radar/cookie_manager.js"></script>
 
-<script src="/cacheable/js/radar/xmlhttpifr.js"></script> 
-<script src="/cacheable/js/radar/radar_controller.js"></script>
-<script src="/cacheable/js/radar/Animator.js"></script>
+<script src="/weather/cacheable/js/radar/xmlhttpifr.js"></script> 
+<script src="/weather/cacheable/js/radar/radar_controller.js"></script>
+<script src="/weather/cacheable/js/radar/Animator.js"></script>
 <script>
 	var loaded = 0;
 	$(document).ready(function(e) {
