--- a/radar/xft-index_2_e.html
+++ b/radar/xft-index_2_e.html
@@ -928,7 +928,7 @@
 <!--[if lt IE 9]>
 <script src="/weather/wet-boew/js/ie8-wet-boew2.min.js"></script>
 <![endif]-->
-<script src="/weather/GCweb/js/theme.min.js"></script>
+<script src="/weather/GCWeb/js/theme.min.js"></script>
 
 
 <script src="/weather/cacheable/js/city/jquery-ui-1.10.3.custom.min.js"></script>
@@ -948,7 +948,7 @@
         }
     });
 </script>
-<script src="/weather/template/GCweb/js/deps/jquery.dataTables.min.js"></script>
+<script src="/weather/template/GCWeb/js/deps/jquery.dataTables.min.js"></script>
 <script src="/weather/city/js/jquery.h5validate.js"></script>
 <script src="/weather/cacheable/js/myprofile/alerts-1.0.min.js"></script>
 <script src="/weather/cacheable/js/myprofile/refresher-1.0.min.js"></script>
