--- a/radar/xft-index_2_e.html
+++ b/radar/xft-index_2_e.html
@@ -23,7 +23,7 @@
 <!--<![endif]-->
 
 <!--[if lt IE 9]>
-<!-- Not sure what this is doing <link rel="stylesheet" href="/template/gcweb/v4.0.22/css/ie8-wet-boew.min.css" /> -->
+<!-- Not sure what this is doing <link rel="stylesheet" href="/template/GCWeb/v4.0.22/css/ie8-wet-boew.min.css" /> -->
 <link href="/weather/GCWeb/assets/favicon.ico" rel="shortcut icon" />
 <link rel="stylesheet" href="/weather/GCWeb/css/ie8-theme.min.css" />
 <link rel="stylesheet" href="/weather/cacheable/css/city/jquery-ui-1.10.3.custom.min.css">
@@ -84,7 +84,7 @@
 <div class="row">
 			
 	<div class="brand col-xs-8 col-sm-9 col-md-6">
-		<a href="http://www.canada.ca/en/index.html"><object type="image/svg+xml" tabindex="-1" data="/weather/GCweb/assets/sig-blk-en.svg"></object><span class="wb-inv"> Government of Canada</span></a>
+		<a href="http://www.canada.ca/en/index.html"><object type="image/svg+xml" tabindex="-1" data="/weather/GCWeb/assets/sig-blk-en.svg"></object><span class="wb-inv"> Government of Canada</span></a>
 	</div>
 
 	<section class="wb-mb-links col-xs-4 col-sm-3 visible-sm visible-xs" id="wb-glb-mn" >
@@ -913,7 +913,7 @@
             <a href="#wb-cont">Top of Page <span class="glyphicon glyphicon-chevron-up"></span></a>
          </div>
          <div class="col-xs-6 col-md-2 text-right">
-            <object type="image/svg+xml" tabindex="-1" role="img" data="/template/gcweb/v4.0.22/assets/wmms-blk.svg" aria-label="Symbol of the Government of Canada"></object>
+            <object type="image/svg+xml" tabindex="-1" role="img" data="/template/GCWeb/v4.0.22/assets/wmms-blk.svg" aria-label="Symbol of the Government of Canada"></object>
          </div>
       </div>
    </div>
