--- a/lightning/index_e.html
+++ b/lightning/index_e.html
@@ -184,7 +184,7 @@
 <div class="wrapper">
 	<div id="wxo-animator" data-image-current="6" data-image-count="7" data-image-lightning-id="NAT" data-wxo-anim-0="../data/lightning_images/lightning_7.png" data-wxo-label-0="#1" data-wxo-anim-1="../data/lightning_images/.png" data-wxo-label-1="#2" data-wxo-anim-2="../data/lightning_images/lightning_2.png" data-wxo-label-2="#3" data-wxo-anim-3="../data/lightning_images/lightning_3.png" data-wxo-label-3="#4" data-wxo-anim-4="../data/lightning_images/lightning_4.png" data-wxo-label-4="#5" data-wxo-anim-5="../data/lightning_images/lightning_5.png" data-wxo-label-5="#6" data-wxo-anim-6="../data/lightning_images/lightning_6.png" data-wxo-label-6="#7"  >
     <div id="wxo-carousel-ie8" class="wxo-ie8-show">
-        <img class="wxo-active img-responsive center-block " id="wxo-anim-img-6" alt="Animation image 7 for  - Canada " src="/data/lightning_images/NAT_201708161430.png">
+        <img class="wxo-active img-responsive center-block " id="wxo-anim-img-6" alt="Animation image 7 for  - Canada " src="../data/lightning_images/lightning_7.png">
     </div>
     <div id="wxo-carousel" class="wxo-ie8-hide">
     	<p class="wxo-loading-msg text-center mrgn-tp-lg mrgn-bttm-lg">Loading images...</p>
@@ -481,7 +481,7 @@
             <a href="#wb-cont">Top of Page <span class="glyphicon glyphicon-chevron-up"></span></a>
          </div>
          <div class="col-xs-6 col-md-2 text-right">
-            <object type="image/svg+xml" tabindex="-1" role="img" data="/template/GCWeb/v4.0.22/assets/wmms-blk.svg" aria-label="Symbol of the Government of Canada"></object>
+            <object type="image/svg+xml" tabindex="-1" role="img" data=".../template/GCWeb/assets/wmms-blk.svg" aria-label="Symbol of the Government of Canada"></object>
          </div>
       </div>
    </div>
