--- a/city/pages/on-118_metric_3_e.html
+++ b/city/pages/on-118_metric_3_e.html
@@ -129,13 +129,13 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
    <a class="pull-right" href="#weather-topics">Weather Topics</a>
    <span id="wxo-divider" class="pull-right">&nbsp;|&nbsp;</span>
 <form class="pull-right" role="search" id="cityjump" method="GET" action="/city/jump_e.html">
-   <label id="search-label" style="white-space:nowrap;" for="city" accesskey="g" class="pull-right">Access city</label>
-   <input id="city" type="text" name="city" pattern=".{2,50}" title="Please enter at least two characters (Up to 50)" required data-h5-errorid="invalid-city"/>
-   <input type="hidden" name="lang" value="e"/>
-   <input type="hidden" name="unit" value=""/>
-   <input type="submit" id="jump" class="wb-invisible" value="Go"/>
-   <noscript><input type="submit" id="jumpnojs" value="Go" formnovalidate/></noscript>
-<div id="invalid-city"></div>
+   	<label id="search-label" for="city" accesskey="g" class="pull-right">Access city</label>
+   	<input id="city" type="text" name="city" pattern=".{2,50}" title="Please enter at least two characters (Up to 50)" required data-h5-errorid="invalid-city"/>
+   	<input type="hidden" name="lang" value="e"/>
+   	<input type="hidden" name="unit" value=""/>
+   	<input type="submit" id="jump" class="wb-invisible" value="Go"/>
+   	<noscript><input type="submit" id="jumpnojs" value="Go" formnovalidate/></noscript>
+	<div id="invalid-city"></div>
 </form>
 </div>
 <div class="clearfix"></div>
