--- a/city/pages/on-118_metric_e.html
+++ b/city/pages/on-118_metric_e.html
@@ -12,7 +12,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
 <!-- Meta data-->
 <!--[if gte IE 9 | !IE ]><!-->
 <link href="/weather/GCWeb/assets/favicon.ico" rel="icon" type="image/x-icon">
-<link rel="stylesheet" href="/weather/GCWeb/css/theme.min.css">
+<link rel="stylesheet" href="/weather/template/GCWeb/css/theme.min.css">
 <!--<![endif]-->
 <!--[if lt IE 9]>
 <link href="/weather/GCWeb/assets/favicon.ico" rel="shortcut icon" />
@@ -124,20 +124,21 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
 </header>
 
 <div class="container hidden-print">
-    <a href='/myprofile/index_e.html' class='pull-right profile-link'>My Weather Profile</a>
-    <span class='pull-right profile-link'>&nbsp;|&nbsp;</span>
-   <a class="pull-right" href="#weather-topics">Weather Topics</a>
-   <span id="wxo-divider" class="pull-right">&nbsp;|&nbsp;</span>
-<form class="pull-right" role="search" id="cityjump" method="GET" action="/city/jump_e.html">
-   <label id="search-label" style="white-space:nowrap;" for="city" accesskey="g" class="pull-right">Access city</label>
-   <input id="city" type="text" name="city" pattern=".{2,50}" title="Please enter at least two characters (Up to 50)" required data-h5-errorid="invalid-city"/>
-   <input type="hidden" name="lang" value="e"/>
-   <input type="hidden" name="unit" value=""/>
-   <input type="submit" id="jump" class="wb-invisible" value="Go"/>
-   <noscript><input type="submit" id="jumpnojs" value="Go" formnovalidate/></noscript>
-<div id="invalid-city"></div>
+
+<span class='pull-right profile-link'>&#160;|&#160;<a href='/myprofile/index_e.html'>My Weather Profile</a></span>
+	<a href="#weather-topics" class="pull-right">Weather Topics</a>
+	<span id="wxo-divider" class="pull-right">|&#160;</span>
+	<form class="mrgn-rght-sm pull-right" role="search" id="cityjump" method="GET" action="/city/jump_e.html">
+   	<label id="search-label" for="city" accesskey="g" class="pull-right">Access city</label>
+   	<input id="city" type="text" name="city" pattern=".{2,50}" title="Please enter at least two characters (Up to 50)" required data-h5-errorid="invalid-city"/>
+   	<input type="hidden" name="lang" value="e"/>
+   	<input type="hidden" name="unit" value=""/>
+   	<input type="submit" id="jump" class="wb-invisible" value="Go"/>
+   	<noscript><input type="submit" id="jumpnojs" value="Go" formnovalidate/></noscript>
+	<div id="invalid-city"></div>
 </form>
 </div>
+
 <div class="clearfix"></div>
 <div id='collapsible-alerts' class='container'></div>
 <div class="clearfix"></div>
