--- a/lightning/index_e.html
+++ b/lightning/index_e.html
@@ -119,7 +119,7 @@
 			</section>
 		</div>
 	</div>
-<nav role="navigation" id="wb-sm" class="wb-menu visible-md visible-lg" data-trgt="mb-pnl" data-ajax-replace="/data/pco-fetch/sitemenu-en.html" typeof="SiteNavigationElement">
+<nav role="navigation" id="wb-sm" class="wb-menu visible-md visible-lg" data-trgt="mb-pnl" data-ajax-replace="weather.gc.ca/data/pco-fetch/sitemenu-en.html" typeof="SiteNavigationElement">
 <div class="container nvbar">
 	<h2>Topics menu</h2>
     <div class="row">
@@ -446,7 +446,7 @@
 </main>
 <aside class="gc-nttvs container">
 <h2>Government of Canada activities and initiatives</h2>
-<div id="gcwb_prts" class="wb-eqht row" data-ajax-replace="/data/pco-fetch/features-en.html">
+<div id="gcwb_prts" class="wb-eqht row" data-ajax-replace="weather.gc.ca/data/pco-fetch/features-en.html">
 <p class="mrgn-lft-md"><a href="http://www.canada.ca/activities.html">Access Government of Canada activities and initiatives</a></p>
 </div></aside>
 <footer role="contentinfo" id="wb-info">
