--- a/lightning/index_e.html
+++ b/lightning/index_e.html
@@ -446,7 +446,7 @@
 </main>
 <aside class="gc-nttvs container">
 <h2>Government of Canada activities and initiatives</h2>
-<div id="gcwb_prts" class="wb-eqht row" data-ajax-replace="weather.gc.ca/data/pco-fetch/features-en.html">
+<div id="gcwb_prts" class="wb-eqht row" data-ajax-replace="http://www.weather.gc.ca/data/pco-fetch/features-en.html">
 <p class="mrgn-lft-md"><a href="http://www.canada.ca/activities.html">Access Government of Canada activities and initiatives</a></p>
 </div></aside>
 <footer role="contentinfo" id="wb-info">
