--- a/radar/xft-index_2_e.html
+++ b/radar/xft-index_2_e.html
@@ -20,6 +20,7 @@
 <link href="../GCWeb/assets/favicon.ico" rel="icon" type="image/x-icon">
 <link rel="stylesheet" href="../GCWeb/css/theme.min.css">
 
+
 <!--<![endif]-->
 
 <!--[if lt IE 9]>
@@ -28,6 +29,8 @@
 <link rel="stylesheet" href="../GCWeb/css/ie8-theme.min.css" />
 <link rel="stylesheet" href="../cacheable/css/city/jquery-ui-1.10.3.custom.min.css">
 <script src="../wet-boew/js/ie8-wet-boew.min.js"></script>
+
+
 <![endif]-->
 <!--[if lte IE 9]>
 <![endif]-->
@@ -43,8 +46,10 @@
 <![endif]-->
 <script type="text/javascript" src="../cacheable/js/radar/Base.js"></script>
 
+
 <link rel="stylesheet" href="../cacheable/css/radar/controller.css" />
 <link rel="stylesheet" href="../cacheable/css/radar/radar2.css" />
+
 <script>
 	if (typeof composite_cities_active === 'undefined'){
 		var composite_cities_active = 'yes';
@@ -189,26 +194,26 @@
 							<noscript>
 			<p class="text-center margin-bottom-none">PRECIPET - Rain 2017-07-26, 01:30 PM EDT</p>
 		</noscript>		
-				<div id="animation-info" class="row text-center animation-info"></div>
+			<div id="animation-info" class="row text-center animation-info"></div>
 			<div class="animation-frame-nat-nojs" id="animation-frame">
 				<noscript class="visible-xs js-hide">
 					<img id="animation-image" 
 					alt="xRadar image for Franktown." 
 					title="xRadar image for Franktown." 
-					src="../data/radar/detailed/temp_image/XFT-25-JUN-17-01.20.50.225145.gif"
+					src="../data/radar/detailed/temp_image/XFT_PRECIP_RAIN_2017_08_18_14_40.GIF" 
 					width="580" 
 					height="480" 
 					class="wxo-radar-img wxo-radar-img-nojs img-responsive"
-					/>
-									</noscript>
+					/> 
+									</noscript> 
 				<img id="animation-image" 
-					alt="Radar image for Franktown." 
+					 alt="Radar image for Franktown." 
 					title="Radar image for Franktown." 
-					src="../data/radar/detailed/temp_image/XFT-25-JUN-17-01.20.50.225145.gif"
+					src="../data/radar/detailed/temp_image/XFT_PRECIP_RAIN_2017_08_18_14_40.GIF" 
 					width="580" 
 					height="480" 
 					class="wxo-radar-img hidden-xs wxo-radar-img-nojs img-responsive"
-					/>
+					/> 
 
 										<img 
 						width="580" 
@@ -296,14 +301,14 @@
 				<button 
 						id="play-button"
 						title="Play" 
-						onclick="animator.callEvent('play',this); return false;" 
+						<!-- onclick="animator.callEvent('play',this); return false;" 
 						onfocus="animator.callEvent('depress',this);" 
 						onblur="animator.callEvent('uplift',this);" 
 						onmouseover="animator.callEvent('depress',this);" 
 						onmouseout="animator.callEvent('uplift',this);" 
-						class="btn btn-default btn-sm">
+						class="btn btn-default btn-sm"> -->
 						<span class="glyphicon glyphicon-play "></span>
-				</button>              
+				</button>           
 				<button 
 					id="pause-button"
 					title="Pause" 
@@ -863,7 +868,8 @@
    </div>
    <div class="clear visible-xs"></div>
 </div>
-</main>
+
+<!-- removing extra buttons </main>
 <div class="row pagedetails">
 <div class="col-sm-6 col-lg-4 mrgn-tp-sm">
 <a href="https://www.canada.ca/en/report-problem.html" class="btn btn-default btn-block">Report a problem or mistake on this page</a>
@@ -878,7 +884,7 @@
 </dl>
 </div>
 </div>
-</main>
+</main> -->
 
 <footer role="contentinfo" id="wb-info">
    <nav role="navigation" class="container wb-navcurr">
@@ -950,7 +956,8 @@
 <script src="../city/js/jquery.h5validate.js"></script>
 <script src="../cacheable/js/myprofile/alerts-1.0.min.js"></script>
 <script src="../cacheable/js/myprofile/refresher-1.0.min.js"></script>
- <script>
+
+<script> <!-- trying to add play in seperate script -->
     $(document).ready(function () {
         $('form').h5Validate({
             errorClass:'white'
@@ -960,6 +967,35 @@
 
 
  <script>
+    $(document).ready(function () {
+        $('form').h5Validate({
+            errorClass:'white'
+        });
+    });
+	</script>
+	
+<!-- <script>
+    var i = 0;
+    var foto = new Array(3);
+    var timer;
+
+    foto[0] = "images/slideshow/slideshow1.png";
+    foto[1] = "images/slideshow/slideshow2.png";
+    foto[2] = "images/slideshow/slideshow3.png";
+    foto[3] = "images/slideshow/slideshow4.png";
+
+    function slide() {
+
+            document.getElementById("playradar").src = foto[i];
+
+            if (i < foto.length - 1) i++;
+            else i = 0;
+
+            timer = setTimeout("slide()", 3000);
+    }
+    </script> -->
+	
+	
 	var loaded = 0;
 	$(document).ready(function(e) {
 		window.animator = new Animator("XFT",{"regionName":"Franktown","displayProduct":true,"image":{"width":"580px","height":"480px"},"overlay":{"height":"480px"},"products":{"active":"PRECIP_RAIN"},"durations":{"active":"short"},"timezone":{"id":"Canada\/Eastern","title":"","offset":""},"settings":"final"});
@@ -980,7 +1016,10 @@
 		}
 		resizeComponents();
 	});
+	
 </script>
+
+
 <div class="device-xs visible-xs"></div>
 <div class="device-sm visible-sm"></div>
 <div class="device-md visible-md"></div>
@@ -1002,5 +1041,11 @@
 <script src="../cacheable/js/radar/xmlhttpifr.js"></script> 
 <script src="../cacheable/js/radar/radar_controller.js"></script>
 <script src="../cacheable/js/radar/Animator.js"></script>
+
+
+<script>
+resizeComponents();
+</script>
+
 </body>
 </html>
