--- a/radar/xft-index_e.html
+++ b/radar/xft-index_e.html
@@ -25,6 +25,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
 
 
 <![endif]-->
+	<script src="/weather/cacheable/js/radar/Animator.js"></script>
 <noscript><link rel="stylesheet" href="/weather/wet-boew/css/noscript.min.css" /></noscript>
 <!-- Google Tag Manager DO NOT REMOVE OR MODIFY - NE PAS SUPPRIMER OU MODIFIER -->
 <script>dataLayer1 = [];</script>
@@ -149,6 +150,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
 		</div>
 	</div>
 
+<script src="/weather/cacheable/js/radar/Animator.js"></script>
 <div class="animator" id="animator">
 	<div class="content row">
 		
@@ -218,7 +220,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
 
 
 			</div>
-	<noscript>
+	<script src="/weather/cacheable/js/radar/Animator.js"></script><noscript>
 	<div class="row">
 		<p class="text-center">Please enable JavaScript to view the animation.</p>
 		<p class="text-center" >The following images are available for PRECIPET - Rain:</p>
