--- a/radar/xft-index_2_e.html
+++ b/radar/xft-index_2_e.html
@@ -299,15 +299,15 @@
 		<div class="controller-box row hidden-xs hidden-sm hidden-md hidden-lg">
 			<div class="col-sm-5 col-xs-10 controller-set  margin-top-medium">
 				<button 
-						id="play-button"
-						title="Play" 
-						<!-- onclick="animator.callEvent('play',this); return false;" 
-						onfocus="animator.callEvent('depress',this);" 
-						onblur="animator.callEvent('uplift',this);" 
-						onmouseover="animator.callEvent('depress',this);" 
-						onmouseout="animator.callEvent('uplift',this);" 
-						class="btn btn-default btn-sm"> -->
-						<span class="glyphicon glyphicon-play "></span>
+					id="play-button"
+					title="Play" 
+					onclick="animator.callEvent('play',this); return false;" 
+					onfocus="animator.callEvent('depress',this);" 
+					onblur="animator.callEvent('uplift',this);" 
+					onmouseover="animator.callEvent('depress',this);" 
+					onmouseout="animator.callEvent('uplift',this);" 
+					class="btn btn-default btn-sm">
+					<span class="glyphicon glyphicon-play "></span>
 				</button>           
 				<button 
 					id="pause-button"
