--- a/radar/xft-index_2_e.html
+++ b/radar/xft-index_2_e.html
@@ -995,7 +995,7 @@
     }
     </script> -->
 	
-	
+	<script>
 	var loaded = 0;
 	$(document).ready(function(e) {
 		window.animator = new Animator("XFT",{"regionName":"Franktown","displayProduct":true,"image":{"width":"580px","height":"480px"},"overlay":{"height":"480px"},"products":{"active":"PRECIP_RAIN"},"durations":{"active":"short"},"timezone":{"id":"Canada\/Eastern","title":"","offset":""},"settings":"final"});
