--- a/radar/xft-index_2_e.html
+++ b/radar/xft-index_2_e.html
@@ -1017,8 +1017,6 @@
 		resizeComponents();
 	});
 	
-	info.fakestuff();
-	
 </script>
 
 
@@ -1042,7 +1040,7 @@
 <script src="../cacheable/js/radar/cookie_manager.js"></script>
 <script src="../cacheable/js/radar/xmlhttpifr.js"></script> 
 <script src="../cacheable/js/radar/radar_controller.js"></script>
-<script src="../cacheable/js/radar/Animator.js"></script>
+<!-- <script src="../cacheable/js/radar/Animator.js"></script> -->
 
 
 <script>
