--- a/index.html
+++ b/index.html
@@ -125,6 +125,22 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
 
 <h3>Severe thunderstorm scenario</h3>
 <ul>
+<li><a href="https://gc-proto.github.io/weather/city/pages/on-118_metric_e">Canada.ca home</a></li>
+<li><a href="https://gc-proto.github.io/weather/city/pages/on-118_metric_e">Environment theme</a></li>
+<li><a href="https://gc-proto.github.io/weather/city/pages/on-118_metric_e">Weather topic</a></li>
+<li><a href="https://gc-proto.github.io/weather/city/pages/on-118_metric_e">Get your weather</a></li>
+<li><a href="https://gc-proto.github.io/weather/city/pages/on-118_metric_e">Weather radar and satellite</a></li>
+<li><a href="https://gc-proto.github.io/weather/city/pages/on-118_metric_e">Severe weather</a></li>
+
+
+<li><a href="https://gc-proto.github.io/weather/city/pages/on-118_metric_e">Weather home</a></li>
+<li><a href="https://gc-proto.github.io/weather/city/pages/on-118_metric_e">Canadian weather</a></li> <!--(province?)-->
+<li><a href="https://gc-proto.github.io/weather/city/pages/on-118_metric_e">Jet stream</a></li>
+<li><a href="https://gc-proto.github.io/weather/city/pages/on-118_metric_e">Alerts</a></li>
+<li><a href="https://gc-proto.github.io/weather/city/pages/on-118_metric_e">Public weather alerts for Canada</a></li>
+  
+<li><a href="https://gc-proto.github.io/weather/city/pages/on-118_metric_e">Canadian weather radar</a></li>  
+ 
 <li><a href="https://gc-proto.github.io/weather/city/pages/on-118_metric_e">Ottawa - Thunderstorm</a></li>
 <li><a href="https://gc-proto.github.io/weather/radar/xft-index_e.html">Franktown radar - Thunderstorm</a></li>
 <li><a href="https://gc-proto.github.io/weather/lightning/index_e.html">Canada lightning map - Thunderstorm</a></li>
@@ -134,16 +150,48 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
   
 <h3>Snowfall scenario</h3>
 <ul>
+<li><a href="https://gc-proto.github.io/weather/city/pages/on-118_metric_e">Canada.ca home</a></li>
+<li><a href="https://gc-proto.github.io/weather/city/pages/on-118_metric_e">Environment theme</a></li>
+<li><a href="https://gc-proto.github.io/weather/city/pages/on-118_metric_e">Weather topic</a></li>
+<li><a href="https://gc-proto.github.io/weather/city/pages/on-118_metric_e">Get your weather</a></li>
+<li><a href="https://gc-proto.github.io/weather/city/pages/on-118_metric_e">Weather radar and satellite</a></li>
+<li><a href="https://gc-proto.github.io/weather/city/pages/on-118_metric_e">Severe weather</a></li>
+
+
+<li><a href="https://gc-proto.github.io/weather/city/pages/on-118_metric_e">Weather home</a></li>
+<li><a href="https://gc-proto.github.io/weather/city/pages/on-118_metric_e">Canadian weather</a></li> <!--(province?)-->
+<li><a href="https://gc-proto.github.io/weather/city/pages/on-118_metric_e">Jet stream</a></li>
+<li><a href="https://gc-proto.github.io/weather/city/pages/on-118_metric_e">Alerts</a></li>
+<li><a href="https://gc-proto.github.io/weather/city/pages/on-118_metric_e">Public weather alerts for Canada</a></li>
+  
+<li><a href="https://gc-proto.github.io/weather/city/pages/on-118_metric_e">Canadian weather radar</a></li>  
+  
 <li><a href="https://gc-proto.github.io/weather/city/pages/on-118_metric_2_e">Ottawa - Snowfall</a></li>
 <li><a href="https://gc-proto.github.io/weather/radar/xft-index_2_e.html">Franktown radar - Snowfall</a></li>
 <li><a href="https://gc-proto.github.io/weather/warnings/ottawa-report_2_e.html">Ottawa alert - Snowfall</a></li>
 </ul>
   
-<h3>Smog scenario</h3>  
+<h3>Smoke scenario</h3>  
 <ul>
-<li><a href="https://gc-proto.github.io/weather/city/pages/on-118_metric_3_e">Ottawa - Smog</a></li>
-<li><a href="https://gc-proto.github.io/weather/warnings/ottawa-report_3_e.html">Ottawa alert - Smog</a></li>
-<li><a href="https://gc-proto.github.io/weather/airquality/pages/onaq-008_e.html">Franktown radar - Smog</a></li>
+<li><a href="https://gc-proto.github.io/weather/city/pages/on-118_metric_e">Canada.ca home</a></li>
+<li><a href="https://gc-proto.github.io/weather/city/pages/on-118_metric_e">Environment theme</a></li>
+<li><a href="https://gc-proto.github.io/weather/city/pages/on-118_metric_e">Weather topic</a></li>
+<li><a href="https://gc-proto.github.io/weather/city/pages/on-118_metric_e">Get your weather</a></li>
+<li><a href="https://gc-proto.github.io/weather/city/pages/on-118_metric_e">Severe weather</a></li>
+
+<li><a href="https://gc-proto.github.io/weather/city/pages/on-118_metric_e">Weather home</a></li>
+<li><a href="https://gc-proto.github.io/weather/city/pages/on-118_metric_e">Canadian weather</a></li> <!--(province?)-->
+<li><a href="https://gc-proto.github.io/weather/city/pages/on-118_metric_e">Jet stream</a></li>
+<li><a href="https://gc-proto.github.io/weather/city/pages/on-118_metric_e">Alerts</a></li>
+<li><a href="https://gc-proto.github.io/weather/city/pages/on-118_metric_e">Public weather alerts for Canada</a></li>
+  
+<li><a href="https://gc-proto.github.io/weather/city/pages/on-118_metric_e">Air quality</a></li>  
+<li><a href="https://gc-proto.github.io/weather/city/pages/on-118_metric_e">Air quality - Ontario</a></li>  
+<li><a href="https://gc-proto.github.io/weather/city/pages/on-118_metric_e">Air quality - Canada</a></li>  
+
+<li><a href="https://gc-proto.github.io/weather/city/pages/on-118_metric_3_e">Ottawa - Smoke</a></li>
+<li><a href="https://gc-proto.github.io/weather/warnings/ottawa-report_3_e.html">Ottawa alert - Smoke</a></li>
+<li><a href="https://gc-proto.github.io/weather/airquality/pages/onaq-008_e.html">Ottawa air quality health index - Smoke</a></li>
 </ul>
    
   
