--- a/services/environment/weather.html
+++ b/services/environment/weather.html
@@ -11,18 +11,18 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
 <meta name="description" content="Web Experience Toolkit (WET) includes reusable components for building and maintaining innovative Web sites that are accessible, usable, and interoperable. These reusable components are open source software and free for use by departments and external Web communities">
 <!-- Meta data-->
 <!--[if gte IE 9 | !IE ]><!-->
-<link href=".../GCWeb/assets/favicon.ico" rel="icon" type="image/x-icon">
-<link rel="stylesheet" href=".../GCWeb/css/theme.min.css">
+<link href="../GCWeb/assets/favicon.ico" rel="icon" type="image/x-icon">
+<link rel="stylesheet" href="../GCWeb/css/theme.min.css">
 <!--<![endif]-->
 <!--[if lt IE 9]>
-<link href=".../GCWeb/assets/favicon.ico" rel="shortcut icon" />
-<link rel="stylesheet" href=".../GCWeb/css/ie8-theme.min.css" />
+<link href="../GCWeb/assets/favicon.ico" rel="shortcut icon" />
+<link rel="stylesheet" href="../GCWeb/css/ie8-theme.min.css" />
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-<script src=".../wet-boew/js/ie8-wet-boew.min.js"></script>
+<script src="../wet-boew/js/ie8-wet-boew.min.js"></script>
 <![endif]-->
 <!--[if lte IE 9]>
 <![endif]-->
-<noscript><link rel="stylesheet" href=".../wet-boew/css/noscript.min.css" /></noscript>
+<noscript><link rel="stylesheet" href="../wet-boew/css/noscript.min.css" /></noscript>
 <!-- Google Tag Manager DO NOT REMOVE OR MODIFY - NE PAS SUPPRIMER OU MODIFIER -->
 <script>dataLayer1 = [];</script>
 <!-- End Google Tag Manager -->
@@ -54,7 +54,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
 </section>
 <div class="row">
 <div class="brand col-xs-8 col-sm-9 col-md-6">
-<a href="https://www.canada.ca/en.html"><object type="image/svg+xml" tabindex="-1" data=".../GCWeb/assets/sig-blk-en.svg"></object><span class="wb-inv"> Government of Canada</span></a>
+<a href="https://www.canada.ca/en.html"><object type="image/svg+xml" tabindex="-1" data="../GCWeb/assets/sig-blk-en.svg"></object><span class="wb-inv"> Government of Canada</span></a>
 </div>
 <section class="wb-mb-links col-xs-4 col-sm-3 visible-sm visible-xs" id="wb-glb-mn">
 <h2>Search and menus</h2>
@@ -81,7 +81,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
 </section>
 </div>
 </div>
-<nav role="navigation" id="wb-sm" data-ajax-replace=".../ajax/sitemenu-en.html" data-trgt="mb-pnl" class="wb-menu visible-md visible-lg" typeof="SiteNavigationElement">
+<nav role="navigation" id="wb-sm" data-ajax-replace="../ajax/sitemenu-en.html" data-trgt="mb-pnl" class="wb-menu visible-md visible-lg" typeof="SiteNavigationElement">
 <div class="container nvbar">
 <h2>Topics menu</h2>
 <div class="row">
@@ -125,38 +125,38 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
   <h2>Services and information</h2> 
   <div class="row"> 
    <section class="col-md-6"> 
-    <h3 class="h5"><a href="/en/services/environment/weather/yourweather.html">Get your weather</a></h3> 
+    <h3 class="h5"><a href="../services/environment/weather/yourweather.html">Get your weather</a></h3> 
     <p>Short-term and long-term forecasts for locations across Canada.</p> 
    </section> 
    <section class="col-md-6"> 
-    <h3 class="h5"><a href="/en/services/environment/weather/severeweather.html">Severe weather</a></h3> 
+    <h3 class="h5"><a href="../services/environment/weather/severeweather.html">Severe weather</a></h3> 
     <p>Current weather alerts, track hurricanes and lightning, report severe weather, stay safe.</p> 
    </section> 
    <div class="clearfix visible-md visible-lg"></div> 
    <section class="col-md-6"> 
-    <h3 class="h5"><a href="/en/services/environment/weather/radar-satellites.html">Weather radar and satellites</a></h3> 
+    <h3 class="h5"><a href="../services/environment/weather/radar-satellites.html">Weather radar and satellites</a></h3> 
     <p>Weather radar maps, outages, satellite images, animations.</p> 
    </section> 
    <section class="col-md-6"> 
-    <h3 class="h5"><a href="/en/services/environment/weather/other-services.html">Aviation, marine, ice and other weather services</a></h3> 
+    <h3 class="h5"><a href="../services/environment/weather/other-services.html">Aviation, marine, ice and other weather services</a></h3> 
     <p>Aviation, marine and ice forecasts and warnings.</p> 
    </section> 
    <div class="clearfix visible-md visible-lg"></div> 
    <section class="col-md-6"> 
-    <h3 class="h5"><a href="/en/services/environment/weather/climatechange.html">Climate change</a></h3> 
+    <h3 class="h5"><a href="../services/environment/weather/climatechange.html">Climate change</a></h3> 
     <p>Canada’s action, climate future, partnerships, adaptation, health, science, emissions reporting.</p> 
    </section> 
    <section class="col-md-6"> 
-    <h3 class="h5"><a href="/en/services/policing/emergencies/hazards.html">Natural hazards</a></h3> 
+    <h3 class="h5"><a href="../services/policing/emergencies/hazards.html">Natural hazards</a></h3> 
     <p>Find out about risks in your region and how to prepare for different situations.</p> 
    </section> 
    <div class="clearfix visible-md visible-lg"></div> 
    <section class="col-md-6"> 
-    <h3 class="h5"><a href="/en/services/environment/weather/airquality.html">Air quality</a></h3> 
+    <h3 class="h5"><a href="../services/environment/weather/airquality.html">Air quality</a></h3> 
     <p>Health effects, research and data, air pollutants, emissions inventories, sustainability indicators.</p> 
    </section> 
    <section class="col-md-6"> 
-    <h3 class="h5"><a href="/en/services/environment/weather/data-research.html">Weather data, research and learning</a></h3> 
+    <h3 class="h5"><a href="../services/environment/weather/data-research.html">Weather data, research and learning</a></h3> 
     <p>Historical weather data, climate trends, Sky Watchers, meteorology for classrooms.</p> 
    </section> 
   </div> 
@@ -179,8 +179,8 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
   <div class="well"> 
    <h2 class="mrgn-tp-0">Contributors:</h2> 
    <ul class="lst-spcd"> 
-    <li><a href="/en/environment-climate-change.html">Environment and Climate Change Canada</a></li> 
-    <li><a href="/en/public-safety-canada.html">Public Safety Canada</a></li> 
+    <li><a href="../environment-climate-change.html">Environment and Climate Change Canada</a></li> 
+    <li><a href="../public-safety-canada.html">Public Safety Canada</a></li> 
    </ul> 
   </div> 
  </aside> 
@@ -208,15 +208,15 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
  <h2>Features</h2> 
  <div class="row"> 
   <section class="col-lg-4 col-md-6 mrgn-bttm-md"> 
-   <a href="http://ec.gc.ca/meteoaloeil-skywatchers/" class="gl-priorities"> <h3 class="h5">Sky Watchers</h3> <img src="/weather/img/features/20150318-2.jpg" alt="" class="img-responsive thumbnail mrgn-bttm-sm"> </a> 
+   <a href="http://ec.gc.ca/meteoaloeil-skywatchers/" class="gl-priorities"> <h3 class="h5">Sky Watchers</h3> <img src="/weather/img/features/20150318-2.jpg" alt="" class="img-responsive thumbnail mrgn-bttm-sm"../a> 
    <p>Interactive meteorology for students and teachers.</p> 
   </section> 
   <section class="col-lg-4 col-md-6 mrgn-bttm-md"> 
-   <a href="http://www.ec.gc.ca/meteo-weather/default.asp?lang=En&amp;n=10220A6B-1#c8" class="gl-priorities"> <h3 class="h5">24-hour forecasts</h3> <img src="/weather/img/features/20150318-3.jpg" alt="" class="img-responsive thumbnail mrgn-bttm-sm"> </a> 
+   <a href="http://www.ec.gc.ca/meteo-weather/default.asp?lang=En&amp;n=10220A6B-1#c8" class="gl-priorities"> <h3 class="h5">24-hour forecasts</h3> <img src="/weather/img/features/20150318-3.jpg" alt="" class="img-responsive thumbnail mrgn-bttm-sm"../a> 
    <p>Get 24-hour weather forecasts for cities across Canada.</p> 
   </section> 
   <section class="col-lg-4 col-md-6 mrgn-bttm-md"> 
-   <a href="http://www.ec.gc.ca/meteo-weather/default.asp?lang=En&amp;n=BBF20017-1" class="gl-priorities"> <h3 class="h5">Winter severe weather – be prepared</h3> <img src="/weather/img/features/20150318-4.jpg" alt="" class="img-responsive thumbnail mrgn-bttm-sm"> </a> 
+   <a href="http://www.ec.gc.ca/meteo-weather/default.asp?lang=En&amp;n=BBF20017-1" class="gl-priorities"> <h3 class="h5">Winter severe weather – be prepared</h3> <img src="/weather/img/features/20150318-4.jpg" alt="" class="img-responsive thumbnail mrgn-bttm-sm"../a> 
    <p>Be aware and prepared for cold and severe winter weather.</p> 
   </section> 
  </div> 
@@ -287,7 +287,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
 <a href="#wb-cont">Top of Page <span class="glyphicon glyphicon-chevron-up"></span></a>
 </div>
 <div class="col-xs-6 col-md-2 text-right">
-<object type="image/svg+xml" tabindex="-1" role="img" data=".../GCWeb/assets/wmms-blk.svg" aria-label="Symbol of the Government of Canada"></object>
+<object type="image/svg+xml" tabindex="-1" role="img" data="../GCWeb/assets/wmms-blk.svg" aria-label="Symbol of the Government of Canada"></object>
 </div>
 </div>
 </div>
@@ -295,11 +295,11 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
 </footer>
 <!--[if gte IE 9 | !IE ]><!-->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.js"></script>
-<script src=".../wet-boew/js/wet-boew.min.js"></script>
+<script src="../wet-boew/js/wet-boew.min.js"></script>
 <!--<![endif]-->
 <!--[if lt IE 9]>
-<script src=".../wet-boew/js/ie8-wet-boew2.min.js"></script>
+<script src="../wet-boew/js/ie8-wet-boew2.min.js"></script>
 <![endif]-->
-<script src=".../GCWeb/js/theme.min.js"></script>
+<script src="../GCWeb/js/theme.min.js"></script>
 </body>
 </html>
